understanding and writting test case

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
 <h2>Unit Testing with JEST</h2>
+
+<h5>Num1</h5>
+<input type="text" [(ngModel)]="num1" placeholder="num1"/>
+<h5>Num2</h5>
+<input type="text" [(ngModel)]="num2" placeholder="num2"/>
+<button (click)="addNumbers()">add</button>
